feat: add HTTP handlers
